Make the Junit tests actually run, not only compiled.